--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: starriew@gmail.com
 description: I am a User Experience Designer and Web Developer in Virginia.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.equinoxmultimedia.com" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+twitter_username: starriebird
 github_username:  starriebird
 
 # Build settings
