update the config file
take out the www

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Starrie Williamson
 email: starriew@gmail.com
 description: I am a User Experience Designer and Web Developer in Virginia.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.equinoxmultimedia.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://equinoxmultimedia.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: starriebird
 github_username:  starriebird
 
