--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Starrie Williamson
 email: starriew@gmail.com
-description: I am a User Experience Designer and Web Developer in Virginia.
+description: I am a User Experience Designer and Full Stack Developer in Virginia.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://equinoxmultimedia.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: starriebird
