--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Starrie Williamson Weiser
+title: Starrie Williamson
 email: starriew@gmail.com
 description: I am a User Experience Designer and Drupal Web Developer in Virginia.
 baseurl: "" # the subpath of your site, e.g. /blog
